css/main.css
body {
  font-family: 'Roboto', sans-serif;
}

.banner {
  background-color: #FEB2A8;
  color: #000;
  opacity: .9;
}

footer {
  background-color: #FEB2A8;
  color: #fff;
}

.nav a {
  list-style-type: none;
  text-decoration: none;
  color: #555555;
  text-transform: uppercase;
}

.nav a:hover {
  color: #FE6067;
}

h1 {
  color: 000;
  border: solid 2px #707070;
  border-right: none;
  border-left: none;
  font-weight: 700;
}

h2 {
  text-transform: uppercase;
  font-weight: 300;
}

h3 {
  font-weight: 300;
}

.card-1,
.card-2 {
  background-color: #C3C3C3;
}

.card-1:hover,
.card-2:hover {
  background-color: #FEB2A8;
}

.w-border {
  border: solid 2px #fff;
}

.border-t {
  border: solid 1px #707070;
  border-right: none;
  border-left: none;
  border-bottom: none;
}

.btn:hover {
  background-color: #FEB2A8;
  border-color: #FEB2A8;
  color: #000;
}

